2023-12-17_elm_sa_kubernetes/lab_snapshots/lab0.cyber-crypt.com/training/counter-manifest/counter-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: main
          image: ondrejsika/counter
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /readyz
              port: 80
          livenessProbe:
            httpGet:
              path: /livez
              port: 80
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 40m
              memory: 40Mi
