2023-12-17_elm_sa_kubernetes/lab_snapshots/lab0.cyber-crypt.com/training/counter-manifest/counter-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - counter.jeddah0.sikademo.com
      secretName: counter.jeddah0.sikademo.com-tls
  rules:
    - host: counter.jeddah0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
